# bison-lab

./: .pre-commit-config.yaml  LICENSE  README.md  env-notebooks.yml  environment.yml  requirements-extra.txt  requirements.txt  setup.cfg
.github/: CODEOWNERS
data/: Buffalo Expansion.kmz  bdod.tif  clay_fraction.tif  phh2o.tif  sand_fraction.tif  shoshone_tribe_subplots.kml  silt_fraction.tif  soc_percent.tif  soil_ssurgo.dbf  soil_ssurgo.shp  soil_ssurgo.shx  soil_taxonomy.parquet  som_percent.tif  texture.tif
data/Buffalo Expansion.kml/: doc.kml
environments/: notebooks.yml
notebooks/: konza_praire.ipynb  kpbs.ipynb  study_area.ipynb
notebooks/Examples/: 001-Clouds-and-Shadows-Masking-Sentinel-2.ipynb  01-copernicus-s2-load-data.ipynb  02-zonal-statistics.ipynb  03-grouped-zonal-statistics.ipynb  04-read_kml_file.ipynb  05-masking_with_polygons.ipynb  Landsat-Preprocessing.ipynb  Sentinel-2-Preprocessing.ipynb  Sentinel_2_Indices.ipynb  parcels.ipynb  xymzwe.geojson  zonal_stats_by_group.csv
notebooks/Exploration/: aoi.dbf  aoi.shp  aoi.shx  parcel_exoploration_and_soil_properties.ipynb  parcels_per_soil.csv  rmwfko.geojson  s2_sr_indices_mean.csv  s2_sr_ndvi_mean.csv  soil_type.kml  treatment_and_control_sites.ipynb
notebooks/Exploration/Vegetation_Indices/: Untitled.ipynb  indicator_variability.ipynb  long_time_series.ipynb  parcels.ipynb  vegetation_indices.ipynb
notebooks/Preprocessing/: grassland_mask.ipynb  ivcybr.geojson
src/bisonlab/: Map.py  __init__.py  io.py  utils.py
src/bisonlab/aoi/: __init__.py  konza.py  kpbs.py
(+4 files in other folders)
