[metadata]
author = Bison Lab
description = A package supporting the Bison Lab project at Earthshot Institute
name = bisonlab
url = https://github.com/earthshot-institute/bison-lab
version = 0.0.1

[flake8]
extend-ignore = E203,E402,W503
max-line-length = 88

[isort]
multi_line_output = 3
profile = black

[options]
install_requires =
    earthengine-api>=0.1
    folium>=0.12
packages =
    bisonlab
package_dir =
    =src
python_requires =
    >=3.10
setup_requires =
    setuptools

[options.extras_require]
dev =
    black>=22.8
    flake8>=5.0
    isort>=5.10
    pre-commit>=2.20
