[metadata]
author = Bison Lab
description = A package supporting the Bison Lab project at Collaborative Earth
name = bison-lab
url = https://github.com/collaborative-earth/bison-lab
version = 0.0.1

[flake8]
extend-ignore = E203,E402,W503
max-line-length = 120

[isort]
multi_line_output = 3
profile = black

[options]
packages =
    bisonlab
package_dir =
    =src
python_requires =
    >=3.10
setup_requires =
    setuptools
